--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<div class="content content-3">
 			<div class="content-3__left">
 				<div class="content-3__tabs-area">
-					<h2 class="title title--white content-3__title">how it work</h2>
+					<h2 class="title title--white content-3__title">how it works</h2>
 					<div class="line line--jumbotron line--content-3"></div>
 					<ul class="content-3__tabs">
 						<li class="content-3__tab">
