--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<p class="jumbotron__img"></p>
 				<div class="jumbotron__texts">
 					
-					<p class="jumbotron__text-1">Balloon Sinusplasty</p>
+					<p class="jumbotron__text-1">Balloon Sinus Surgery</p>
 					<p class="jumbotron__text-2">
 						Solve your long term sinus<br>
 							problems in less than<br>
